--- a/src/App.css
+++ b/src/App.css
@@ -97,6 +97,7 @@
 
 .InputMain {
     display: flex;
+    flex-direction: column;
     /*width: 100%;*/
 }
 
@@ -221,4 +222,10 @@
     flex-direction: column;
     width: 50%;
     height: 50%;
+}
+
+.formMain {
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
