--- a/src/App.css
+++ b/src/App.css
@@ -224,8 +224,37 @@
     height: 50%;
 }
 
-.formMain {
+.FormMain {
     display: flex;
     justify-content: center;
     align-items: center;
+    border: 2px solid #3823f7;
+    margin: 10px;
+    height: 600px;
+}
+
+.CourseInfoMain {
+    display: flex;
+    flex-direction: column;
+    border: 2px solid #3823f7;
+    margin: 10px;
+    padding: 0 0 50px 0;
+}
+
+.CourseInfoDescriptionAndOther {
+    display: flex;
+    flex-direction: row;
+}
+
+.CourseInfoOther {
+    display: flex;
+    flex-direction: column;
+    width: 30%;
+    margin: 10px;
+}
+
+.CourseInfoDescription {
+    display: flex;
+    width: 70%;
+    margin: 10px;
 }
